tests/regression/300_ADVANCED_FEATURES/365_INTERCEPTORS/365_004_opaque_protection/expected.txt
error[KORU002]: module not found: '$std/interceptors'
  --> tests/regression/300_ADVANCED_FEATURES/365_INTERCEPTORS/365_004_opaque_protection/input.kz:8:1
    |
  8 | ~import "$std/interceptors"
    | ^
  hint: check the import path, koru.json paths, and KORU_STDLIB/KORU_PATH environment variables

